# jelly

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  jelly.toml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/dependency/: bfs.rs
src/adapters/in/get/: controllers.rs
src/adapters/pom/: pom.rs
src/adapters/search/: bfs.rs
src/cli/: app.rs  mod.rs  output.rs
src/cli/commands/: add.rs  init.rs  install.rs  mod.rs  run.rs
src/core/: mod.rs
src/core/gdp/: mod.rs
src/core/gdp/dependency/: dependency_search.rs  download_command.rs  mod.rs  pom_donwloader.rs  pom_managment.rs
src/core/gdp/models/: dependency.rs  mod.rs
src/core/gdp/search/: dependency_search.rs  mod.rs
src/core/gdp/service/: dependency_service.rs  mod.rs  pom_service.rs
src/core/gdp/util/: downlader.rs  helper.rs  maven_helper.rs  mod.rs
src/errors/: beetle_error.rs  jelly_error.rs  mod.rs
test-dir/: jelly.toml
